2003-09-17  Jon Schewe  <jpschewe@mtu.net>

	* docs/index.html: Updated with information about computers
	required for a tournament (707857).

2003-09-16  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/xml/GenerateDB.java (generateDB): Make sure no team name
	is blank by defaulting it to '<No Name>' in the database (707849).

2003-09-08  Jon Schewe  <jpschewe@mtu.net>

	* web/admin/filterTeams.jsp: Remvoed javascript from submit button
	in favor of using standard form parameters and server side
	checking (707895).

2003-09-07  Jon Schewe  <jpschewe@mtu.net>

	* web/scoreboard/top10.jsp: Now the top10 page uses session
	variables instead of form parameters to keep track of which
	division is being displayed.  This should keep the browsers
	history from filling up with urls (707896).

	* web/index.jsp: Figured out how to use the JSTL XML tags to get
	information out of challengeDocument to remove some more
	scriptlets.

2003-09-06  Jon Schewe  <jpschewe@mtu.net>

	* web/report/teamPerformanceReport.jsp: Added a report that
	contains the performance scores for a team by run number (707861).

2003-08-27  Jon Schewe  <jpschewe@mtu.net>

	* web/scoreboard/allteams.jsp: Got scrolling working in Mozilla and
	IE (707853).

	* web/playoff/remoteControlBrackets.jsp: Got scrolling working in Mozilla and
	IE (707853).

	* web/playoff/brackets.jsp: Got scrolling working in Mozilla and
	IE (707853).

2003-08-25  Jon Schewe  <jpschewe@mtu.net>

	* web/style/style.jsp: Started on using stylesheets everywhere.
	Use a jsp file as a stylesheet so that parameters such as images
	can be done via JSTL.  In this case make sure that all files use
	the appropriate background image and color without having to put
	it in all of the body tags (707854).

	* src/fll/gui/SubjectiveFrame.java: Display title attribute rather
	than name attribute from subjective categories, also changed in
	the report generation classes (707873).

	* src/resources/fll.xsd: Added title attribute to subjective