@@ -1,5 +1,6 @@
 # Set root logger priority to INFO
-log4j.rootLogger=INFO, CONSOLE, LOGFILE
+log4j.rootLogger=INFO, CONSOLE
+#log4j.logger.fll.web.admin.UploadSubjectiveData=DEBUG
 
 # setup CONSOLE appender
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
